--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0",
-        "symfony/form": "^2.7|^3.0"
+        "php": "^5.6|^7.0|^8.0",
+        "symfony/form": "^2.7|^3.0|^4.0|^5.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.0",
